# PK-Symulator_UAR

./: .clang-uml  ARX.cpp  ARX.h  ARXCoefficientItem.cpp  ARXCoefficientItem.hpp  ARXCoefficientItem.ui  BUILD_DEFINE.h  CMakeLists.txt  DialogARX.cpp  DialogARX.h  DialogARX.ui  DialogDebug.cpp  DialogDebug.hpp  Doxyfile  Generator.cpp  Generator.h  GeneratorProstokatny.cpp  GeneratorProstokatny.h  GeneratorSinusoida.cpp  GeneratorSinusoida.h  GeneratorSkokJednostkowy.cpp  GeneratorSkokJednostkowy.hpp  Klasy.qmodel  Klasy.uxf  ListWithWxtremes.cpp  ListWithWxtremes.hpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  QSaveState.cpp  QSaveState.hpp  QTimerState.cpp  QTimerState.hpp  README.md  RegulatorPID.cpp  RegulatorPID.h  State.cpp  State.h  SymulatorUAR.pro  Test.cpp  (+27 more)
DOKUMENTACJA/etap1/: Klasy.qmodel  Klasy.uxf  uwqagi.txt
DOKUMENTACJA/etap2/: prezentacja2.pptx
DOKUMENTACJA/etap3/: uml.uxf
DOKUMENTACJA/etap4/: prezentacja4.pptx
DOKUMENTACJA/etap5/: Sprawozdanie.docx  uml.uxf
docs/html/: _a_r_x_8cpp.html  _a_r_x_8cpp__incl.map  _a_r_x_8cpp__incl.md5  _a_r_x_8h.html  _a_r_x_8h.js  _a_r_x_8h__dep__incl.map  _a_r_x_8h__dep__incl.md5  _a_r_x_8h__incl.map  _a_r_x_8h__incl.md5  _a_r_x_8h_source.html  _a_r_x_coefficient_item_8cpp.html  _a_r_x_coefficient_item_8cpp__incl.map  _a_r_x_coefficient_item_8cpp__incl.md5  _a_r_x_coefficient_item_8hpp.html  _a_r_x_coefficient_item_8hpp.js  _a_r_x_coefficient_item_8hpp__dep__incl.map  _a_r_x_coefficient_item_8hpp__dep__incl.md5  _a_r_x_coefficient_item_8hpp__incl.map  _a_r_x_coefficient_item_8hpp__incl.md5  _a_r_x_coefficient_item_8hpp_source.html  _b_u_i_l_d___d_e_f_i_n_e_8h.html  _b_u_i_l_d___d_e_f_i_n_e_8h.js  _b_u_i_l_d___d_e_f_i_n_e_8h__dep__incl.map  _b_u_i_l_d___d_e_f_i_n_e_8h__dep__incl.md5  _b_u_i_l_d___d_e_f_i_n_e_8h_source.html  _dialog_a_r_x_8cpp.html  _dialog_a_r_x_8cpp__incl.map  _dialog_a_r_x_8cpp__incl.md5  _dialog_a_r_x_8h.html  _dialog_a_r_x_8h.js  _dialog_a_r_x_8h__dep__incl.map  _dialog_a_r_x_8h__dep__incl.md5  _dialog_a_r_x_8h__incl.map  _dialog_a_r_x_8h__incl.md5  _dialog_a_r_x_8h_source.html  _dialog_debug_8cpp.html  _dialog_debug_8cpp__incl.map  _dialog_debug_8cpp__incl.md5  _dialog_debug_8hpp.html  _dialog_debug_8hpp.js  (+364 more)
docs/html/search/: all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  (+30 more)
docs/latex/: _a_r_x_8cpp.tex  _a_r_x_8cpp__incl.md5  _a_r_x_8h.tex  _a_r_x_8h__dep__incl.md5  _a_r_x_8h__incl.md5  _a_r_x_8h_source.tex  _a_r_x_coefficient_item_8cpp.tex  _a_r_x_coefficient_item_8cpp__incl.md5  _a_r_x_coefficient_item_8hpp.tex  _a_r_x_coefficient_item_8hpp__dep__incl.md5  _a_r_x_coefficient_item_8hpp__incl.md5  _a_r_x_coefficient_item_8hpp_source.tex  _b_u_i_l_d___d_e_f_i_n_e_8h.tex  _b_u_i_l_d___d_e_f_i_n_e_8h__dep__incl.md5  _b_u_i_l_d___d_e_f_i_n_e_8h_source.tex  _dialog_a_r_x_8cpp.tex  _dialog_a_r_x_8cpp__incl.md5  _dialog_a_r_x_8h.tex  _dialog_a_r_x_8h__dep__incl.md5  _dialog_a_r_x_8h__incl.md5  _dialog_a_r_x_8h_source.tex  _dialog_debug_8cpp.tex  _dialog_debug_8cpp__incl.md5  _dialog_debug_8hpp.tex  _dialog_debug_8hpp__dep__incl.md5  _dialog_debug_8hpp__incl.md5  _dialog_debug_8hpp_source.tex  _generator_8cpp.tex  _generator_8cpp__incl.md5  _generator_8h.tex  _generator_8h__dep__incl.md5  _generator_8h__incl.md5  _generator_8h_source.tex  _generator_prostokatny_8cpp.tex  _generator_prostokatny_8cpp__incl.md5  _generator_prostokatny_8h.tex  _generator_prostokatny_8h__dep__incl.md5  _generator_prostokatny_8h__incl.md5  _generator_prostokatny_8h_source.tex  _generator_sinusoida_8cpp.tex  (+150 more)
etap1/: Projekt aplikacji symulacji układu automatycznej regulacji.pptx  uwqagi.txt
etap2/: Projekt aplikacji symulacji układu automatycznej regulacji.pptx
etap3/: uml - Copy.uxf  uml.uxf
nienazwane/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
uml/: first_diagram_name.puml
